--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -1,57 +1,45 @@
-<!DOCTYPE html>
-<html lang="zh">
+<html lang='zh'>
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>网易云音乐 API</title>
-	</head>
-
-	<body>
-		<h1>网易云音乐 API</h1>
-		当你看到这个页面时,这个服务已经成功跑起来了~
-		<a href="https://neteasecloudmusicapi.vercel.app">查看文档</a>
-		<h2>例子:</h2>
-		<ul>
-			<li>1. <a href="./search?keywords=海阔天空">搜索</a></li>
-			<li>2. <a href="./comment/music?id=186016&limit=1">歌曲评论</a></li>
-			<li>3. <a href="./dj/program?rid=336355127">电台节目</a></li>
-			<li>4. <a href="/qrlogin.html">二维码登录</a></li>
-		</ul>
+		<meta charset='UTF-8' />
+		<meta name='viewport' content='width=device-width, initial-scale=1.0' />
+		<meta http-equiv='X-UA-Compatible' content='ie=edge' />
+		<title>Stomer项目 API</title>
 		<style>
-			html,
-			body {
-				height: 100vh;
-				width: 100vw;
-				margin: 0;
-				padding: 0;
-				background: #ffffff;
-				text-align: center;
-				margin-top: 30px;
-				overflow: hidden;
-			}
-
-			* {
-				color: rgb(100, 100, 100);
-			}
-
-			a {
-				color: #42b983;
-			}
-
-			ul,
-			li {
-				margin: 0;
-			}
-
-			ul {
-				margin-left: -40px;
-				line-height: 30px;
-			}
-
-			li {
-				list-style: none;
-			}
+			* { margin: 0; padding: 0; user-select: none; }
+			html,body { width: 100%; height: 100%; display: flex; flex-direction: column; overflow: hidden; align-items: center; color: #646464; }
+			#root { display: flex; flex-direction: column; align-items: center; gap: 16px; padding: 40px; }
+			h1 { font-size: 32px; color: #22252d; }
+			h2 { display: flex; align-items: center; }
+			a { color: #42b983; text-decoration: underline; cursor: pointer; }
+			ol { display: flex; flex-direction: column; gap: 10px; }
 		</style>
+	</head>
+	<body>
+		<div id="root">
+			<h1>Stomer项目 API</h1>
+			<p>当你看到这个页面时,这个服务已经成功跑起来了~</p>
+			<h2>例子</h2>
+			<ol>
+				<li>
+					<h2>
+						<a id="captcha-tap">图形验证码:</a>
+						<img id="captcha" style="margin-left: 10px;" src="/api/basic/captcha?width=120&height=50&fontSize=50&t=0.5350505939543719" alt="">
+					</h2>
+				</li>
+				<li>
+					<h2><a href="/api-doc">Swagger文档</a></h2>
+				</li>
+				<li>
+					<h2><a href="/doc.html">Knife4j文档</a></h2>
+				</li>
+			</ol>
+		</div>
 	</body>
+	<script>
+		window.onload = function() {
+			document.querySelector('#captcha-tap').addEventListener('click', function() {
+				document.querySelector('#captcha').src = `/api/basic/captcha?width=120&height=50&fontSize=50&t=${Math.random()}`
+			})
+		}
+	</script>
 </html>
